welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: not found: value k
	     for(j <- 0 to y-1){setPos(j-k,i);ecritMessage(c);c=c+1}
                                         ^ZigZag:7: error: not found: value i
		for(j <- 0 to y-1){for(k<- 0 to y-1){setPos(j-k,i);ecritMessage(c);c=c+1}}
                                                                ^